# GLEngine

./: CMakeLists.txt  Changelog.txt  GLEngine  README.md  TODO  imgui.ini  makefile
App/: CMakeLists.txt
App/Resources/Maps/: unnamed.map
App/Resources/Shaders/: Fragment.glsl
Core/Source/Core/: Application.cpp  Application.h  ImGuiLayer.cpp  ImGuiLayer.h  InputEvents.h  InputManager.h  Layer.h  MapLoader.h  WindowEvents.h
Core/Source/Core/Renderer/: Mesh.h  Model.h  Renderer.cpp  Texture.cpp  Texture.h
Restructure/: CMakeLists.txt  Dependencies.cmake
Restructure/App/: CMakeLists.txt
Restructure/App/Resources/Shaders/: Vertex.glsl
Restructure/App/Shaders/: Vertex.glsl
Restructure/App/Source/: AppLayer.cpp  AppLayer.h  Main.cpp  OverlayLayer.cpp  OverlayLayer.h
Restructure/Core/: CMakeLists.txt
Restructure/Core/Source/Core/: Application.cpp  Application.h  Event.h  ImGuiLayer.cpp  ImGuiLayer.h  InputManager.cpp  InputManager.h  MapMesh.h  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h
Restructure/Core/Source/Core/Renderer/: Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
include/: CMakeLists.txt  Camera.h  Common.h  FramebufferHandler.h  ImguiLayer.h  InputManager.h  LevelEditor.h  LevelLayout.h  ObjectManager.h  Shader.h  Texture.h  game.h  resource_manager.h
include/glad/: glad.h
resources/levels/: Test.txt  asdf.txt  mikehawk.txt
src/: CMakeLists.txt  FramebufferHandler.cpp  FramebufferHandler.h  GLEngine  GLEngine.cpp  ImguiLayer.cpp  ImguiLayer.h  InputManager.cpp  InputManager.h  LevelEditor.cpp  LevelEditor.h  LevelLayout.cpp  LevelLayout.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjectManager.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  backup.cpp  game.cpp  game.h  glad.c  resource_manager.cpp  resource_manager.h
src/Shaders/: 3.3.shader.fs  3.3.shader.vs
src/include/: Camera.h  Common.h
src/include/glad/: glad.h
src/levels/: Level1.txt
